--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-scripts": "3.3.0",
     "react-scroll": "^1.7.14",
     "react-viewer": "^3.1.0",
-    "redux": "^4.0.4",
-    "shortid": "^2.2.15"
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
