--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "3.3.0",
     "react-scroll": "^1.7.14",
     "react-viewer": "^3.1.0",
+    "react-virtuoso": "^0.12.3",
     "redux": "^4.0.4"
   },
   "scripts": {
